# modellen4

./: README.md  pyproject.toml
app/: __init__.py  ai.py  analytics.py  data_store.py  main.py  routes.py  security.py
app/static/css/: styles.css
app/static/js/: dashboard.js  login.js
app/templates/: base.html  dashboard.html  login.html
tests/: test_api.py
